@@ -24,6 +24,7 @@
  * Hint with buffer names when using C-k with emacs keymap (#606)
  * Fix display of paths starting with / (#528)
  * Don't mark buffer as changed if nothing was killed (#618)
+ * Nicer findFile &c behaviour in dired buffers (#149)
 
 0.9.0
 -----
